--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ntts",
-  "description": "",
-  "version": "1.0.0",
+  "name": "moore",
+  "description": "Your Language companion",
+  "version": "0.0.0",
   "type": "module",
   "private": true,
   "scripts": {
