--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moore",
-  "description": "Your Language companion available on discord....",
+  "description": "YYour Language Companion Available on Discord....",
   "version": "0.0.0",
   "type": "module",
   "private": true,
@@ -14,20 +14,19 @@
     "lint:eslint": "eslint . --ext js,jsx,ts,tsx",
     "lint:style": "prettier --write .",
     "start": "robo start",
-    "fmt": "npx prettier -w .",
     "db": "npx prisma validate; npx prisma format; npx prisma db push; npx prisma generate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@prisma/client": "^5.9.1",
     "@roboplay/robo.js": "0.9.23",
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.12.1"
   },
   "devDependencies": {
     "@swc/core": "^1.3.104",
-    "@types/node": "^18.19.15",
+    "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.36.0",
     "prettier": "^2.8.5",
     "prisma": "^5.9.1",
