--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moore",
-  "description": "YYour Language Companion Available on Discord....",
+  "description": "Your Language Companion Available on Discord....",
   "version": "0.0.0",
   "type": "module",
   "private": true,
